--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/index.js",
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yassui",
@@ -12,6 +14,9 @@
   "devDependencies": {
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
     "typescript": "^3.9.7"
   }
 }
