--- a/package.json
+++ b/package.json
@@ -1,23 +1,44 @@
 {
   "name": "nodejs-api",
   "version": "1.0.0",
+  "description": "API built with Node.js and Typescipt",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/index.js",
     "start:dev": "ts-node-dev 'src/index.ts'",
+
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:functional": "jest --projects ./test --runInBand",
+
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:fix": "eslint ./src ./test --ext .ts --fix"   
   },
+
+  "keywords": [
+    "node",
+    "nodejs",
+    "typescipt",
+    "api"
+  ],
+
   "author": "yassui",
   "license": "MIT",
+  
+  "dependencies": {
+    "module-alias": "^2.2.2"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.9",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.0.27",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
+    "jest": "^26.2.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.4",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   }
